--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Escherichia",
         "Fascicularis",
         "germline",
+        "imgt",
         "Macaca",
         "Mykiss",
         "Norvegicus",
