--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -9,7 +9,7 @@ rust-version = "1.70.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rustyms = { git = "https://github.com/snijderlab/rustyms", branch = "main" }
+rustyms = "0.7.0"
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 itertools = "0.12"
