--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -2,7 +2,7 @@
 name = "generate"
 version = "0.1.0"
 edition = "2021"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 authors = ["Douwe Schulte <d.schulte@uu.nl>"]
 rust-version = "1.70.0"
 
