--- a/generate/Cargo.toml
+++ b/generate/Cargo.toml
@@ -11,5 +11,5 @@ rust-version = "1.70.0"
 [dependencies]
 bincode = "1.3"
 itertools = "0.12"
-rustyms = { git = "https://github.com/snijderlab/rustyms" }
+rustyms = { git = "https://github.com/snijderlab/rustyms", branch = "release" }
 serde = { version = "1.0", features = ["derive"] }
